--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-        "guzzlehttp/guzzle": "^6.2"
+      "guzzlehttp/guzzle": "^6.3 |^7.0",
+     "php": "^7.1 | ^8.0",
+  "illuminate/support": ">=5.0.0"
+
     },
     "require-dev": {
-        "phpunit/phpunit": "6.3.*"
+          "phpunit/phpunit": "^8.0"
       
     },
     "autoload": {
